Fix mobile spacing

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -289,12 +289,15 @@ img {
     -ms-flex-item-align: center;
     -ms-grid-row-align: center;
     align-self: center;
+    padding-right: 1em;
+    padding-left: 0em;
   }
 
   .clients li:nth-child(2n) img {
     -webkit-box-ordinal-group: 1;
     -ms-flex-order: 0;
     order: 0;
+    margin: 0 1em;
   }
 
   .work {
